--- a/public_html/index.html
+++ b/public_html/index.html
@@ -12,6 +12,7 @@
 		<script src="js/capture.js"></script>
 		<script src="js/request.js"></script>
 		<script src="js/sanitize.js"></script>
+		<script src="js/search.js"></script>
 		<script src="https://apis.google.com/js/api.js"></script>
 	</head>
 
