--- a/public_html/details.html
+++ b/public_html/details.html
@@ -143,5 +143,15 @@
 				<div class="submit">Get Callback</div>
 			</div>
 		</div>
+
+		<div class="property-container error">
+			<div class="tab">
+				<h1></h1>
+
+				<div class="container">
+					<div class="text" onclick="window.location.reload()">Try Again</div>
+				</div>
+			</div>
+		</div>
 	</body>
 </html>
